<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_acerca_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.developers.carlos.uppy.AcercaDeActivity"
    tools:showIn="@layout/activity_acerca_de">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/img_miFoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/yo"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="4dp"
        app:civ_shadow="false"
        app:civ_shadow_radius="5"
        app:civ_shadow_color="#8BC34A"/>

    <TextView
        android:layout_below="@+id/img_miFoto"
        android:id="@+id/tv_nombre"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/acercaDe_nombre"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        />
    <ImageView
        android:id="@+id/img_linea"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linea"
        android:layout_below="@+id/tv_nombre"
        android:src="@android:drawable/divider_horizontal_bright"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:id="@+id/ly_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/img_linea"
        android:layout_marginTop="@dimen/btn_form">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ic_llamar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone_48"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_marginStart="@dimen/btn_form"
                android:id="@+id/tv_telefono"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:text="@string/acercaDe_telefono"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/feedback_48"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_marginStart="@dimen/btn_form"
                android:id="@+id/tv_correo"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:text="@string/acercaDe_correo"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
